--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/index.css">
+    <link rel="stylesheet" href="/friday-six/assets/css/index.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
@@ -25,6 +25,6 @@
         <p id="teamTwo"></p>
     </main>
 
-    <script src="/assets/js/main.js"></script>
+    <script src="/friday-six/assets/js/main.js"></script>
   </body>
 </html>
