--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/friday-six/assets/css/index.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/index.css">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" ></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
@@ -23,8 +21,14 @@
         <button onclick="generateTeams()">Generate Teams!</button>
         <p id="teamOne"></p>
         <p id="teamTwo"></p>
+
+        <div class="add-player">
+          <input type="text" id="newName" value="New player name">
+          <input type="number" id="newRating" value="0">
+          <button onclick="addPlayer()">Add Player</button>
+        </div>
     </main>
 
-    <script src="/friday-six/assets/js/main.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/main.js"></script>
   </body>
 </html>
