--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -3,7 +3,7 @@
 * {
     font-family: 'Poppins', sans-serif;
     margin: 0;
-}
+} 
 
 main {
     width: 100%;
@@ -13,12 +13,72 @@ main {
 button {
     background-color: white;
     border: solid 1px black;
+    border-radius: 5px;
 }
 
-ul, li {
+ul {
     list-style-type: none;
+    padding: 0;
+}
+
+li {
+    width: fit-content;
 }
 
 input {
     margin-right: 1em;
+}
+
+// input:nth-last-of-type(), input:nth-last-of-type(2) {
+//     margin-right: 0;
+// }
+
+h3 {
+    font-weight: normal;
+}
+
+.add-player {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+}
+
+@media (max-width: 425px) {
+    h1 {
+        font-size: 2.5em;
+        margin-bottom: -1em;
+    }
+    h3 {
+        font-size: 1.5em;
+    }
+    li, p {
+        font-size: 1em;
+    }
+    li {
+        margin-left: 40%;
+    }
+    .add-player {
+        bottom: 10%;
+    }
+}
+
+@media (min-width: 813px) {
+    h1 {
+        font-size: 5em;
+        margin-bottom: -0.5em;
+    }
+    h3 {
+        font-size: 1.5em;
+    }
+    li, p {
+        font-size: 1em;
+    }
+    li {
+        margin-left: 48%;
+    }
+    .add-player {
+        bottom: 20%;
+    }
 }
