--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -29,6 +29,8 @@
         </div>
     </main>
 
+    <!-- dummy commit -->
+
     <script src="{{ site.baseurl }}/assets/js/main.js"></script>
   </body>
 </html>
