--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -57,7 +57,7 @@ h3 {
     margin-left: 40%;
   }
   .add-player {
-    bottom: 5%;
+    top: 100%;
   }
 }
 @media (min-width: 813px) {
@@ -75,6 +75,6 @@ h3 {
     margin-left: 48%;
   }
   .add-player {
-    bottom: 10%;
+    top: 90%;
   }
 }/*# sourceMappingURL=index.css.map */
