--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -60,7 +60,7 @@ h3 {
         margin-left: 40%;
     }
     .add-player {
-        bottom: 5%;
+        top: 100%;
     }
 }
 
@@ -79,6 +79,6 @@ h3 {
         margin-left: 48%;
     }
     .add-player {
-        bottom: 10%;
+        top: 90%;
     }
 }
