update styling and add synergy

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -31,6 +31,6 @@
 
     <!-- dummy commit -->
 
-    <script src="{{ site.baseurl }}/assets/js/main.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/index.js"></script>
   </body>
 </html>
