--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -13,11 +13,13 @@ button {
   background-color: white;
   border: solid 1px black;
   border-radius: 5px;
+  color: black;
 }
 
 ul {
   list-style-type: none;
   padding: 0;
+  overflow: auto;
 }
 
 li {
@@ -56,8 +58,11 @@ h3 {
   li {
     margin-left: 40%;
   }
+  ul {
+    height: 50vh;
+  }
   .add-player {
-    top: 100%;
+    bottom: 5%;
   }
 }
 @media (min-width: 813px) {
@@ -74,7 +79,10 @@ h3 {
   li {
     margin-left: 48%;
   }
+  ul {
+    height: 60vh;
+  }
   .add-player {
-    top: 90%;
+    bottom: 10%;
   }
 }/*# sourceMappingURL=index.css.map */
