--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -14,11 +14,13 @@ button {
     background-color: white;
     border: solid 1px black;
     border-radius: 5px;
+    color: black;
 }
 
 ul {
     list-style-type: none;
     padding: 0;
+    overflow: auto;
 }
 
 li {
@@ -59,8 +61,11 @@ h3 {
     li {
         margin-left: 40%;
     }
+    ul {
+        height: 50vh;
+    }
     .add-player {
-        top: 100%;
+        bottom: 5%;
     }
 }
 
@@ -78,7 +83,10 @@ h3 {
     li {
         margin-left: 48%;
     }
+    ul {
+        height: 60vh;
+    }
     .add-player {
-        top: 90%;
+        bottom: 10%;
     }
 }
