rewording and styling

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -23,8 +23,8 @@
         <p id="teamTwo"></p>
 
         <div class="add-player">
-          <input type="text" id="newName" value="New player name">
-          <input type="number" id="newRating" value="0">
+          <input type="text" id="newName" placeholder="new player name" required>
+          <input type="number" id="newRating" value="0" required>
           <button onclick="addPlayer()">Add Player</button>
         </div>
     </main>
